[package]
name = "progrust-bar"
version = "0.1.1"
edition = "2021"
authors = ["Chris Mann"]
license = "MIT OR Apache-2.0"
description = "A simple progress bar for Rust"
keywords = ["progress", "bar", "cli", "terminal"]
categories = ["command-line-utilities"]
homepage = "https://github.com/chriswmann/progrust-bar"
repository = "https://github.com/chriswmann/progrust-bar"
readme = "README.md"
include = ["src/lib.rs", "LICENSE", "README.md"]

[lib]
name = "progrust"
path = "src/lib.rs"

[dependencies]
